# gghlite-flint

./: Makefile.am  configure.ac
applications/: Makefile.am  common.h  nike.h
dgs/: Makefile.am
dgs/dgs/: dgs_gauss.h  dgs_gauss_dp.c
dgsl/: Makefile.am  dgsl.c
gghlite/: Makefile.am  api.c  gghlite-defs.h  gghlite-internals.h  gghlite.c  gghlite.h  gghlite_pk.c  misc.c  misc.h
mife/: mife_internals.c
oz/: Makefile.am  flint-addons.c  flint-addons.h  norm.c  ntt.c  oz.c  rem.c  sqrt.c
tests/: Makefile.am  test_instgen.c  test_jigsaw.c
